chore: change package.json and README.md

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "micahtheme",
   "displayName": "micah theme",
   "description": "",
+  "repository": "https://github.com/MICAHFANG/micah-theme.git",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.67.0"
