--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "micahtheme",
   "displayName": "micah theme",
   "description": "",
+  "license": "MIT",
   "repository": "https://github.com/MICAHFANG/micah-theme.git",
   "version": "0.0.1",
   "engines": {
