--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MICAHFANG/micah-theme.git",
+  "publisher": "MicahFang",
+  "icon": "",
   "version": "0.0.4",
   "engines": {
     "vscode": "^1.67.0"
