--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "repository": "https://github.com/MICAHFANG/micah-theme.git",
   "publisher": "MicahFang",
-  "icon": "",
-  "version": "0.0.4",
+  "icon": "./screenshots/icon.png",
+  "version": "0.0.5",
   "engines": {
     "vscode": "^1.67.0"
   },
